Hotfix to graph; legend is no longer cut off and will display correctly in the table

--- a/war/cssfiles/stockTemplateStyle.css
+++ b/war/cssfiles/stockTemplateStyle.css
@@ -144,8 +144,7 @@ body{
 
 
 .panel-body {
-    display: inline-block;
-    width: 80%;
+    width: 75%;
 }
 
 .panel-heading > .dropdown .dropdown-toggle {
